--- a/main.css
+++ b/main.css
@@ -23,7 +23,6 @@ body {
   display: flex;
   justify-content: space-around;
   width: 100%;
-  /*margin-bottom: 25px;*/
 }
 .adding-space {
   height: 50px;
@@ -48,5 +47,39 @@ body {
   align-items: center;
   justify-content: center;
   justify-content: space-around;
+  border: 1px solid red;
+}
+.each {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.email {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
+}
+.phone {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
+}
+.linked {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
+}
+.git {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   border: 1px solid red;
 }
